# HMBLib

./: CMakeLists.txt  LICENSE.txt  README.md
cmake-modules/: FindHedgehog.cmake  FindNVTX.cmake  FindOpenBLAS.cmake
doc/: design-doc.tex
plot-scripts/: csvplotter.py  logPlot.py  result_hadamard_hedgehog.csv  result_hadamard_htgs.csv
src/BlockDecomposition/: BlockDecompositionTask.h
src/Hadamard/HadamardState/: HadamardState.cpp  HadamardState.hpp
src/Hadamard/HadamardTasks/: InMemoryHadamardProductTask.cpp  InMemoryHadamardProductTask.hpp
src/LuDecompNoPiv/LuDecompData/: TRSMData.h  UpdateData.h
src/LuDecompNoPiv/LuDecompState/: GaussElimState.h  MatMulState.h  OutputState.h  TRSMState.h
src/LuDecompNoPiv/LuDecompTasks/: GaussElimTask.h  MatMulTask.h  TRSMTask.h
src/LuDecompNoPiv/LuStateManagers/: GaussElimStateManager.h  TRSMStateManager.h
src/LuDecompPartPiv/LuDecompPartPivData/: IPivPermutedBlockData.h  LASWPData.h  PermutedBlockData.h  TRSMData.h  UpdateData.h
src/LuDecompPartPiv/LuDecompPartPivState/: BlocktoPanelState.h  GETRFState.h  LASWPLeftState.h  LASWPRightState.h  MatMulState.h  OutputState.h  TRSMState.h
src/LuDecompPartPiv/LuDecompPartPivStateManagers/: GETRFStateManager.h  LASWPLeftStateManager.h  LASWPRightStateManager.h
src/LuDecompPartPiv/LuDecompPartPivTasks/: GETRFTask.h  LASWPLeftTask.h  LASWPRightTask.h  MatMulTask.h  TRSMTask.h
src/MatMul/MatMulData/: MatrixMulData.hpp
src/MatMul/MatMulManager/: AccumlateStateManager.h
src/MatMul/MatMulState/: AccumulateState.h  AddCState.h  MulBlockState.h  SendState.h
src/MatMul/MatMulTasks/: AccumulateTask.h  AddCTask.h  MulBlockTask.h
src/State/: InputState.h
src/blasWrappers/: matmul.cpp  matmul.hpp
src/data/: AccumMatData.h  HadamardData.hpp  MatrixBlockData.h  MatrixData.h  MatrixData_Old.hpp  MatrixRequestData.hpp
src/graphs/: InMemoryHadamardGraph.cpp  InMemoryHadamardGraph.hpp  InMemoryLUDecompositionGraph.cpp  InMemoryLUDecompositionGraph.h  InMemoryMatrixMultiplicationGraph.cpp  InMemoryMatrixMultiplicationGraph.h
test/: CMakeLists.txt  LuDecompNoPivMain.cpp  LuDecompPartPivMain.cpp  main.cpp  matmulMain.cpp
